# bevy_contrib_bobox

./: Cargo.toml  README.md
assets/: CREDITS.md
examples/: outline_2d.rs  trailing_effect.rs
src/: cursor_2dworld_pos_plugin.rs  lib.rs
src/outline_2d/: mod.rs  outline_shader.frag  outline_shader.vert
