[package]
name = "bevy_contrib_bobox"
version = "0.1.0"
authors = ["Boris Boutillier <boris.boutillier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
rapier2d = [ "bevy_rapier2d"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy"}
bevy_rapier2d = { version = "0.3.1" , optional=true}