[package]
name = "bevy_contrib_bobox"
version = "0.3.0"
authors = ["Boris Boutillier <boris.boutillier@gmail.com>"]
edition = "2018"

[features]
rapier2d = [ "bevy_rapier2d"]

[dependencies]
bevy = { version = "0.3.0" }
#bevy = { path = "../forks/bevy" }
bevy_rapier2d = { version = "0.5.0" , optional=true}